app/app_mobile.css
body{
	padding:0;
	margin:0;
}

html,body{
	height:100%;
}

#map{
    height: -webkit-calc(100% - 100px);
    height: -moz-calc(100% - 100px);
    height: calc(100% - 100px);
    top:100px;
}

#inputarea{
	position:absolute;
	height:100px;
    width:100%;
	top:0px;
	padding:5px;
	z-index:10;
	background-color:#000;
	font-size:25px;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	color: #fff;
}

.buttons {
    color: white;
    font-size: 35px;
    text-align: center;
    cursor: pointer;
    z-index: 2;
}


#reload-button {
    height: 50px;
    top: 200px;
    width: 50px;
    background: black;
    position: absolute;
    left: calc(100% - 50px);
}

#locateMe-button {
    height: 50px;
    top: 251px;
    width: 50px;
    background: black;
    position: absolute;
    left: calc(100% - 50px);
}


#search-button {
    height: 1000px;
    top: calc(100% - 100px);
    width: 100px;
    background: black;
    position: absolute;
    left: calc(50% - 50px);
    font-size: 50px;
    visibility: hidden;
}

#loading {
    position: fixed;
    height: 100%;
    width: 100%;
    top:0px;
    left: 0px;
    z-index: 10;
    background: black;
    opacity: 0.8;
    color: white;
    visibility: hidden;
    text-align: center;
    vertical-align: middle;
    font-size: 50px;
}

.autocomplete-suggestions { 
	border: 1px solid #999; 
	background: #fff; 
	cursor: default; 
	overflow: auto; 
}
.autocomplete-suggestion { 
	padding: 5px 5px; 
	font-size: 1.2em; 
	white-space: nowrap; 
	overflow: hidden; 
}

.autocomplete-selected { 
	background: #f0f0f0; 
}
.autocomplete-suggestions strong { 
	font-weight: normal; 
	color: #428bca; 
}

